tests/testFiles/semanticErrors/functionreturntwodifftypes.meme
you: b()
me, an intellectual: {
  i can haz 10;
  i can haz "hi";
}
